--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "node
+    app.js"
   },
   "author": "",
   "license": "ISC",
